<resources>
    <string name="app_name">Pix Moto Port</string>
    <string name="apply">Apply</string>
    <string name="telegramChannelLink"><a href="https://t.me/MotoCustomization">Telegram Channel</a></string>
    <string name="BuyMeACoffee"><a href="https://buymeacoffee.com/kalp96757">Buy Me a Coffee</a></string>
    <string name="UPILink"><a href="upi://pay?pa=kalp9675-1@okaxis&amp;pn=Kalp%20Shah&amp;aid=uGICAgMDM-tLiWQ">Upi Link</a></string>
    <string name="Porter">Kalp Shah</string>
</resources>